--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -4,13 +4,13 @@
   gap: 4px;
   font-family: Arial, sans-serif;
   width: 100%;
-  max-width: 400px;
+  max-width: 500px;
 }
 
 .label {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 500;
-  color: #2d2d2d;
+  color: #373737;
 }
 
 .required {
@@ -19,19 +19,29 @@
 }
 
 .input {
-  padding: 10px 14px;
+  padding: 8px 9px;
   border: 1px solid #cfcfcf;
-  border-radius: 6px;
-  font-size: 14px;
+  border-radius: 4px;
+  font-size: 18px;
   line-height: 1.5;
   color: #2d2d2d;
   outline: none;
   width: 100%;
   box-sizing: border-box;
+  transition: box-shadow 0.2s ease, border-color 0.2s ease;
+
+  &:focus {
+    border-color: dodgerblue;
+    outline: 1.8px solid dodgerblue;
+    outline-offset: 1px;
+    box-shadow: 0 0 0 3px rgba(30, 144, 255, 0.25);
+  }
 }
 
+
+
 .input::placeholder {
-  color: #9e9e9e;
+  color: #858585;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
